--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,26 @@ body{
 }
 
 footer{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--color-white);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 7vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    padding: 5vw;
 }
 footer img{
     height: 6vw;
 }
 
 header{
-    padding: 9vw 3vw 9vw 5vw;
+    padding: 20vw 3vw 9vw 5vw;
 }
 header h1{
     font-family: "Inter-SemiBold";
+    font-size: 8vw;
 }
 header h1 span{
     color: var(--color-purple);
