--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,12 @@
     box-sizing: border-box;
 }
 
+
 body{
     background: var(--color-white);
     color: var(--color-black);
 }
+
 
 header{
     position: fixed;
@@ -26,6 +28,7 @@ header img{
     height: 6vw;
 }
 
+
 main{
     padding: 20vw 3vw 9vw 5vw;
 }
@@ -36,6 +39,7 @@ main h1{
 main h1 span{
     color: var(--color-purple);
 }
+
 
 form{
     display: flex;  
@@ -65,6 +69,7 @@ form img{
     height: 5vh;
     width: 7vw;
 }
+
 
 .filters {  
     display: flex;
@@ -97,4 +102,87 @@ form img{
 }
 .four{
     background: var(--color-mint);
+}
+
+
+.trending-events {  
+    padding: 2vw 1vw;  
+    background-color: #f9f9f9;  
+}  
+
+.trending-events__title {  
+    display: flex;  
+    justify-content: space-between;  
+    align-items: center;  
+    margin-bottom: 1.5vw;  
+}  
+
+.trending-events__container {  
+    display: flex;  
+    overflow-x: auto;  
+    scroll-behavior: smooth;  
+    gap: 1.5vw;  
+}  
+
+.trending-events__item {  
+    position: relative;  
+    min-width: 30vw;
+    height: 45vh;  
+    overflow: hidden;  
+    background-color: #fff;  
+    border-radius: 0.8vw;  
+    box-shadow: 0 0.1vw 0.3vw rgba(0, 0, 0, 0.1);  
+}  
+
+.trending-events__item__image {  
+    height: 100%;
+    overflow: hidden;  
+}  
+
+.trending-events__item__image img {  
+    width: 100%;  
+    height: 100%;  
+    object-fit: cover;
+}  
+
+.trending-events__item__info {  
+    position: absolute;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    background: rgba(0, 0, 0, 0.6);  
+    color: white;  
+    padding: 1vw;  
+    text-align: center;  
+    height: 50%;
+    font-family: 'Arial', sans-serif;  
+    font-size: 4vw;  
+}  
+
+.trending-events__details {  
+    display: flex;  
+    align-items: center;  
+    justify-content: center;  
+    margin-top: 0.5vw;  
+}  
+
+.trending-events__details__location,  
+.trending-events__details__date {  
+    display: flex;  
+    align-items: center;  
+    margin: 0 0.5vw;  
+}  
+
+.trending-events__details__location img,  
+.trending-events__details__date img {  
+    width: 2vw;  
+    height: 2vw;  
+    margin-right: 0.5vw;  
+}  
+
+.trending-events__price {  
+    margin-top: 1vw;  
+    font-family: 'Arial', sans-serif;  
+    font-size: 2.5vw;  
+    color: var(--color-orange)
 }
