--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
 @import url(variables.css);
+
+            /*** All ***/
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+            /*** Body ***/
 
 body{
     background: var(--color-white);
     color: var(--color-black);
 }
 
+            /*** Header ***/
 
 header{
     position: fixed;
@@ -28,6 +33,7 @@ header img{
     height: 6vw;
 }
 
+            /*** Main ***/
 
 main{
     padding: 20vw 3vw 9vw 5vw;
@@ -40,6 +46,7 @@ main h1 span{
     color: var(--color-purple);
 }
 
+            /*** Navigation Bar ***/
 
 form{
     display: flex;  
@@ -70,6 +77,7 @@ form img{
     width: 7vw;
 }
 
+            /*** Filter Events ***/
 
 .filters {  
     display: flex;
@@ -104,6 +112,7 @@ form img{
     background: var(--color-mint);
 }
 
+            /*** Trending Events ***/
 
 .trending-events {  
     padding: 2vw 1vw;  
@@ -186,3 +195,5 @@ form img{
     font-size: 2.5vw;  
     color: var(--color-orange)
 }
+
+            /*** Nearby Events ***/
