chore: :truck: Fix links

--- a/views/tickets.html
+++ b/views/tickets.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="storage/img/icon.ico" type="image/ico">
     <title>Title</title>
     
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/styleTickets.css">
 </head>
 
 <body>
@@ -16,13 +16,13 @@
             <!--- Header --->
 
     <header>
-        <a href="#"><img src="storage/img/back.svg"></a>  
-        <a href="#"><img src="storage/img/menu.svg"></a>   
+        <a href="#"><img src="../storage/img/back.svg"></a>  
+        <a href="#"><img src="../storage/img/menu.svg"></a>   
     </header>
 
     <section>
-        <img src="storage/img/ticket.png">
-        <img src="storage/img/ticket.png">  
+        <img src="../storage/img/ticket.png">
+        <img src="../storage/img/ticket.png">  
     </section>
     
 </body>
