--- a/views/details.html
+++ b/views/details.html
@@ -74,7 +74,7 @@
         </div>
         <div class="right">
             <button>
-            <a href="#">Buy Ticket</a>
+            <a href="../views/tickets.html">Buy Ticket</a>
             </button>
         </div>
     </footer>
