chore: :truck: Back Links

--- a/views/details.html
+++ b/views/details.html
@@ -16,13 +16,13 @@
             <!--- Nav --->
 
     <nav>
-        <a href="#"><img src="storage/img/back.svg"></a>
+        <a href="../index.html"><img src="../storage/img/back.svg"></a>
     </nav>
     
             <!--- Header --->
 
     <header>
-        <img src="storage/img/coldplay.png">
+        <img src="../storage/img/coldplay.png">
     </header>
     
             <!--- Main --->
@@ -30,11 +30,11 @@
     <main>
         <h1>Coldplay <span>: Music of the Spheres</span></h1>
         <div class="location">
-            <img src="storage/img/location.svg">
+            <img src="../storage/img/location.svg">
             <p>Gelora Bung Karno Stadium, Jakarta</p>
         </div>
         <div class="date">
-            <img src="storage/img/date.svg">
+            <img src="../storage/img/date.svg">
             <p>November 15 2023</p>
         </div>
         <div class="participants">
@@ -63,7 +63,7 @@
 
     <section class= "location">
         <h2>Venue & Location</h2>
-        <img src="storage/img/map.png">
+        <img src="../storage/img/map.png">
     </section>
     
             <!--- Footer --->
