--- a/views/tickets.html
+++ b/views/tickets.html
@@ -16,7 +16,7 @@
             <!--- Header --->
 
     <header>
-        <a href="#"><img src="../storage/img/back.svg"></a>  
+        <a href="details.html"><img src="../storage/img/back.svg"></a>  
         <a href="#"><img src="../storage/img/menu.svg"></a>   
     </header>
 
